crates/oxc_linter/src/snapshots/eslint_no_inline_comments.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:1:12]
 1 │ var a = 1; /*A block comment inline after code*/
   ·            ─────────────────────────────────────
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:1:1]
 1 │ /*A block comment inline before code*/ var a = 2;
   · ──────────────────────────────────────
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:1:8]
 1 │ foo(); // global foo
   ·        ─────────────
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:1:8]
 1 │ foo(); // globals foo
   ·        ──────────────
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:1:10]
 1 │ var foo; // exported foo
   ·          ───────────────
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:1:1]
 1 │ /* something */ var a = 2;
   · ───────────────
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:1:12]
 1 │ var a = 3; //A comment inline with code
   ·            ────────────────────────────
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:1:12]
 1 │ var a = 3; // someday use eslint-disable-line here
   ·            ───────────────────────────────────────
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:1:12]
 1 │ var a = 3; // other line comment
   ·            ─────────────────────
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:2:4]
 1 │     var a = 4;
 2 │ ╭─▶             /**A
 3 │ │                * block
 4 │ │                * comment
 5 │ │                * inline
 6 │ │                * between
 7 │ ╰─▶              * code*/ var foo = a;
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:2:5]
 1 │ var a =
 2 │             {/**/}
   ·              ────
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:2:26]
 1 │ var a = (
 2 │                             <div>{/* comment */}</div>
   ·                                   ─────────────
 3 │                         )
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:2:26]
 1 │ var a = (
 2 │                             <div>{// comment
   ·                                   ──────────
 3 │                             }
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:2:26]
 1 │ var a = (
 2 │                             <div>{/* comment */
   ·                                   ─────────────
 3 │                             }
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:2:26]
 1 │     var a = (
 2 │ ╭─▶                             <div>{/*
 3 │ │                                      * comment
 4 │ ╰─▶                                    */
 5 │                                 }
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:2:26]
 1 │     var a = (
 2 │ ╭─▶                             <div>{/*
 3 │ │                                      * comment
 4 │ ╰─▶                                    */}
 5 │                                 </div>
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:2:26]
 1 │     var a = (
 2 │ ╭─▶                             <div>{/*
 3 │ │                                      * comment
 4 │ ╰─▶                                    */}</div>
 5 │                             )
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:3:21]
 2 │                                 <div>
 3 │ ╭─▶                             {/*
 4 │ │                                 * comment
 5 │ ╰─▶                               */}</div>
 6 │                             )
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:4:21]
 3 │                                 {
 4 │ ╭─▶                              /*
 5 │ │                                 * comment
 6 │ ╰─▶                               */}</div>
 7 │                             )
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:4:20]
 3 │                             {
 4 │                             /* comment */}</div>
   ·                             ─────────────
 5 │                         )
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:3:22]
 2 │                             <div>
 3 │                             {b/* comment */}
   ·                               ─────────────
 4 │                             </div>
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:3:21]
 2 │                             <div>
 3 │                             {/* comment */b}
   ·                              ─────────────
 4 │                             </div>
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:3:21]
 2 │                             <div>
 3 │                             {// comment
   ·                              ──────────
 4 │                                 b
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:3:21]
 2 │                             <div>
 3 │                             {/* comment */
   ·                              ─────────────
 4 │                                 b
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:3:21]
 2 │                                 <div>
 3 │ ╭─▶                             {/*
 4 │ │                                 * comment
 5 │ ╰─▶                               */
 6 │                                     b
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:4:25]
 3 │                             {
 4 │                                 b// comment
   ·                                  ──────────
 5 │                             }
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:4:24]
 3 │                             {
 4 │                                 /* comment */b
   ·                                 ─────────────
 5 │                             }
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:4:25]
 3 │                             {
 4 │                                 b/* comment */
   ·                                  ─────────────
 5 │                             }
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:5:20]
 4 │                                     b
 5 │ ╭─▶                             /*
 6 │ │                                * comment
 7 │ ╰─▶                              */}
 8 │                                 </div>
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:5:20]
 4 │                                 b
 5 │                             /* comment */}
   ·                             ─────────────
 6 │                             </div>
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:4:26]
 3 │                             {
 4 │                                 { /* this is an empty object literal, not braces for js code! */ }
   ·                                   ──────────────────────────────────────────────────────────────
 5 │                             }
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:4:25]
 3 │                             {
 4 │                                 {// comment
   ·                                  ──────────
 5 │                                 }
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:5:24]
 4 │                                 {
 5 │                                 /* comment */}
   ·                                 ─────────────
 6 │                             }
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:3:22]
 2 │                             <div>
 3 │                             { /* two comments on the same line... */ /* ...are not allowed, same as with a non-JSX code */}
   ·                               ──────────────────────────────────────
 4 │                             </div>
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:3:61]
 2 │                             <div>
 3 │                             { /* two comments on the same line... */ /* ...are not allowed, same as with a non-JSX code */}
   ·                                                                      ─────────────────────────────────────────────────────
 4 │                             </div>
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:4:24]
 3 │                                 {
 4 │ ╭─▶                                 /* overlapping
 5 │ ╰─▶                                 */ /*
 6 │                                        lines */
   ╰────
  help: Move the comment to a separate line

  ⚠ eslint(no-inline-comments): Unexpected comment inline with code
   ╭─[no_inline_comments.tsx:5:27]
 4 │                                     /* overlapping
 5 │ ╭─▶                                 */ /*
 6 │ ╰─▶                                    lines */
 7 │                                 }
   ╰────
  help: Move the comment to a separate line
